--- a/index.html
+++ b/index.html
@@ -8,3 +8,13 @@
 <p>First paragraph.</p>
   </body>
 </html>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+
+  </body>
+</html>
