--- a/index.html
+++ b/index.html
@@ -5,16 +5,9 @@
     <title></title>
   </head>
   <body>
-<p>First paragraph.</p>
-  </body>
-</html>
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
+ <h1> This is a Heading</h1>
+ <p>This is a paragraph.</p>
 <p>This is another paragraph.</p>
-  </body>
+<p>First paragraph.</p>
+</body>
 </html>
